test/functions/deitz/default/test_default4-error.good
test_default4-error.chpl:25: error: ambiguous call 'foo'
note: candidates are:
test_default4-error.chpl:1: foo
test_default4-error.chpl:5: foo
test_default4-error.chpl:9: foo
fail: program does not type
